--- a/index.html
+++ b/index.html
@@ -42,7 +42,43 @@
         </div>
 
     </div>
+    <div class="about">
+        <div class="about__title">О гирудотерапевте</div>
+        <div class="about__container">
+            <div class="about__img">
+                <img src="img/About.png" alt="">
+            </div>
+            <div class="about__body">
+                <div class="about__text">
+                    Специалист имеет высшее образование, специальность биолог. 20 лет работы в клинико-диагностической лаборатории на должности врач-лаборант. Пройден курс лекций и стажировки для получения знаний и практических навыков по направлению: народный метод оздоровления пиявками в г. Барнаул 2015г. Имеется свидетельство о подготовке в сфере народной медицины и оздоровительных практик регистрационный номер: БГ 0093 Сертификат №093
+                </div>
+                <div class="about__sertificat sertificat">
+                    <div class="sertificat__item">
+                        <img src="img/about__sert.png" alt="">
+                    </div>
+                    <div class="sertificat__item">
+                        <img src="img/about__sert.png" alt="">
+                    </div>
+                    <div class="sertificat__item">
+                        <img src="img/about__sert.png" alt="">
+                    </div>
+                    <div class="sertificat__item">
+                        <img src="img/about__sert.png" alt="">
+                    </div>
+                    <div class="sertificat__item">
+                        <img src="img/about__sert.png" alt="">
+                    </div>
+                    <div class="sertificat__item">
+                        <img src="img/about__sert.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <footer class="footer">
+        <div class="footer__text">Гирудотерапевт 2022</div>
+    </footer>
 
     </div>
 
