ready (without map, review, interactive, animation)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     Гирудотерапевт в Железногорске-Илимском
                 </h1>
                 <div class="main__description">
-                    С помощью гирудотерапии можно не только оздоровить организм, не применяя лекарственных препаратов, но и провести эффективное лечение целого ряда заблеваний.
+                    С помощью гирудотерапии можно не только оздоровить организм, не применяя лекарственных препаратов, но и провести эффективное лечение целого ряда заболеваний.
                 </div>
             </div>
             <div class="main__img">
@@ -75,7 +75,44 @@
             </div>
         </div>
     </div>
+    <div class="block-write">
+        <div class="button button_write">Записаться</div>
 
+    </div>
+
+    <div class="price">
+        <div class="price__content">
+            <h2 class="price__title">
+                Стоимость
+            </h2>
+            <div class="price__cost">
+                Курс лечения подбирается индивидуально вместе со специалистом во время первичной консультации, стоимость лечения зависит от выбранного курса.
+            </div>
+        </div>
+    </div>
+    <div class="rewiew">
+        <div class="rewiew__content">
+            <h3 class="rewiew__title">
+                Отзывы
+            </h3>
+            <!-- add script собирает коментарии через ок, вк, тл, а выводят в один чат. -->
+        </div>
+    </div>
+    <div class="contact">
+        <h2 class="contact__title">Контакты</h2>
+        <div class="contact__content">
+            <div class="contact__map map">
+                <h3 class="map__title">Мы находимся здесь</h3>
+                <div class="map__map">карта</div>
+            </div>
+            <div class="contact__text getInTouchWith">
+                <p class="getInTouchWith__adress">Железногорск-Илимский, ул. Янгеля 1</p>
+                <p class="getInTouchWith__inst"><a href="instagram.com">Мы в instagram</a></p>
+                <p class="getInTouchWith__phone">+7 989 989 51 23</p>
+                
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="footer__text">Гирудотерапевт 2022</div>
     </footer>
